# grambot-panel

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_i18n_static_replies.py
backend/src/app/: main.py
backend/src/app/api/: router.py
backend/src/app/api/v1/: auth.py  automation.py  bots.py  broadcast.py  conversations.py  deps.py  settings.py  stats.py  templates.py  users.py  webhook.py
backend/src/app/core/: config.py  exceptions.py  security.py
backend/src/app/db/: __init__.py  session.py
backend/src/app/modules/automation/: models.py  repository.py  schemas.py  service.py
backend/src/app/modules/bots/: models.py  repository.py  schemas.py  service.py
backend/src/app/modules/broadcast/: models.py  repository.py  schemas.py  service.py
backend/src/app/modules/conversations/: models.py  repository.py  schemas.py  service.py
backend/src/app/modules/settings/: models.py  repository.py  schemas.py  service.py
backend/src/app/modules/stats/: schemas.py  service.py
backend/src/app/modules/telegram/: handler.py
backend/src/app/modules/templates/: models.py  repository.py  schemas.py  service.py
backend/src/app/modules/users/: models.py  repository.py  schemas.py  service.py
backend/src/app/workers/: tasks.py
devops/: deploy.md  docker-compose.yml
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx-spa.conf  package-lock.json  package.json  vite.config.js
(+44 files in other folders)
